@@ -1,8 +1,10 @@
 package co.coinvestor.oauthserver.config;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.oauth2.config.annotation.configurers.ClientDetailsServiceConfigurer;
 import org.springframework.security.oauth2.config.annotation.web.configuration.AuthorizationServerConfigurerAdapter;
@@ -15,23 +17,44 @@ import org.springframework.security.oauth2.provider.token.DefaultTokenServices;
 import org.springframework.security.oauth2.provider.token.TokenEnhancerChain;
 import org.springframework.security.oauth2.provider.token.TokenStore;
 import org.springframework.security.oauth2.provider.token.store.JdbcTokenStore;
+import org.springframework.security.oauth2.provider.token.store.JwtAccessTokenConverter;
+import org.springframework.security.oauth2.provider.token.store.JwtTokenStore;
+import org.springframework.security.oauth2.provider.token.store.KeyStoreKeyFactory;
 
 import javax.sql.DataSource;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 @Configuration
-@RequiredArgsConstructor
 @EnableAuthorizationServer
 public class AuthServerConfig
         extends AuthorizationServerConfigurerAdapter {
 
+    private final String password;
+    private final String privateKey;
+    private final String alias;
     private final AuthenticationManager authenticationManager;
-
     private final CustomClientDetailsService customClientDetailsService;
-
     private final DataSource dataSource;
-
     private final CustomTokenEnhancer customTokenEnhancer;
+
+    public AuthServerConfig(@Value("${rsa.password}") String password,
+                            @Value("${rsa.privateKey}") String privateKey,
+                            @Value("${rsa.alias}") String alias,
+                            AuthenticationManager authenticationManager,
+                            CustomClientDetailsService customClientDetailsService,
+                            DataSource dataSource,
+                            CustomTokenEnhancer customTokenEnhancer) {
+        this.password = password;
+        this.privateKey = privateKey;
+        this.alias = alias;
+        this.authenticationManager = authenticationManager;
+        this.customClientDetailsService = customClientDetailsService;
+        this.dataSource = dataSource;
+        this.customTokenEnhancer = customTokenEnhancer;
+    }
+
 
     @Override
     public void configure(ClientDetailsServiceConfigurer clients) throws Exception {
@@ -44,6 +67,7 @@ public class AuthServerConfig
         endpoints
                 .authenticationManager(authenticationManager)
                 .tokenStore(tokenStore())
+                .accessTokenConverter(jwtAccessTokenConverter())
                 .tokenServices(tokenServices())
                 .approvalStore(approvalStore())
                 .pathMapping("/oauth/confirm_access", "/custom/oauth/approve")
@@ -52,13 +76,16 @@ public class AuthServerConfig
 
     @Override
     public void configure(AuthorizationServerSecurityConfigurer security) {
-        //check_token endpoint (credential 필수)
-        security.checkTokenAccess("isAuthenticated()");
+        security
+                //check_token endpoint (credential 필수)
+                .checkTokenAccess("isAuthenticated()")
+                //token_key endpoint (credential 필수)
+                .tokenKeyAccess("permitAll()");
     }
 
     @Bean
     public TokenStore tokenStore() {
-        return new JdbcTokenStore(dataSource);
+        return new JwtTokenStore(jwtAccessTokenConverter());
     }
 
     @Bean
@@ -71,7 +98,7 @@ public class AuthServerConfig
         tokenServices.setRefreshTokenValiditySeconds(86400); // set refresh token to expire after 1 day
 
         TokenEnhancerChain tokenEnhancerChain = new TokenEnhancerChain();
-        tokenEnhancerChain.setTokenEnhancers(Arrays.asList(customTokenEnhancer));
+        tokenEnhancerChain.setTokenEnhancers(List.of(customTokenEnhancer, jwtAccessTokenConverter()));
         tokenServices.setTokenEnhancer(tokenEnhancerChain);
 
         return tokenServices;
@@ -81,4 +108,21 @@ public class AuthServerConfig
     public ApprovalStore approvalStore() {
         return new JdbcApprovalStore(dataSource);
     }
+
+
+    @Bean
+    public JwtAccessTokenConverter jwtAccessTokenConverter() {
+        var converter = new JwtAccessTokenConverter();
+
+        KeyStoreKeyFactory keyStoreKeyFactory =
+                new KeyStoreKeyFactory(
+                        new ClassPathResource(privateKey),
+                        password.toCharArray());
+        converter.setKeyPair(keyStoreKeyFactory.getKeyPair(alias));
+
+        return converter;
+    }
+
+
+
 }
